--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.png" type="image/png" sizes="3232">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
@@ -18,11 +19,22 @@
 </head>
 
 <body>
+
     <header>
+        <div class="menu-left">
+            <button id="button-help" class="material-icons">menu</button>
+            <button id="button-help" class="material-icons">help</button>
+        </div>
         <h1>Wordle Clone</h1>
+        <div class="menu-right">
+            <button id="button-stats" class="material-icons">leaderboard</button>
+            <button id="button-setup" class="material-icons">settings</button>
+        </div>
     </header>
+
     <div id="game-board"></div>
     <div id="keyboard-cont"></div>
+
 </body>
 
 </html>
