--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="./modal.css">
     <link rel="stylesheet" href="./style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" defer></script>
-    <script src="./words.js"></script>
+    <script src="./modal.js"></script>
+    <script src="./words.js" defer></script>
     <script src="./script.js" defer></script>
 </head>
 
-<body>
+<body class="dark">
 
-    <header>
+    <header class="blurable">
         <div class="menu-left">
-            <button id="button-help" class="material-icons">menu</button>
+            <button id="button-menu" class="material-icons">menu</button>
             <button id="button-help" class="material-icons">help</button>
         </div>
         <h1>Wordle Clone</h1>
@@ -32,8 +34,8 @@
         </div>
     </header>
 
-    <div id="game-board"></div>
-    <div id="keyboard-cont"></div>
+    <div id="game-board" class="blurable"></div>
+    <div id="keyboard-cont" class="blurable"></div>
 
 </body>
 
