Partial implementation of settings

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h1>Wordle Clone</h1>
         <div class="menu-right">
             <button id="button-stats" class="material-icons">leaderboard</button>
-            <button id="button-setup" class="material-icons">settings</button>
+            <button id="button-settings" class="material-icons">settings</button>
         </div>
     </header>
 
