Settings and correct guess letter evaluations

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="./script.js" defer></script>
 </head>
 
-<body class="dark">
+<body>
 
     <header class="blurable">
         <div class="menu-left">
